Fix spacing on flashes. Post now works

--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -282,7 +282,7 @@ a:hover
 
   div.notice, div.error
     padding: 20px 20px 20px 100px
-    margin: 20px 0
+    margin: 6px 0 20px 0
     -moz-border-radius: $border_radius_amount
     -webkit-border-radius: $border_radius_amount
     border-radius: $border_radius_amount
@@ -315,7 +315,7 @@ a:hover
 
 
   .post
-    padding: 28px 0 56px 0
+    padding: 16px 0 56px 0
     line-height: 140%
     font-size: 0.9em
 
